[package]
name = "wasm_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wgpu = "0.19"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "AudioContext",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam",
    "AudioNode",
    "console"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
